name:                todo
version:             0.1.0.0
synopsis:            My awesome todo-list app
description:         Please see README.md
homepage:            https://github.com/andrewkiluk/todoList
license:             BSD3
license-file:        LICENSE
author:              Andrew Kiluk
maintainer:          andrewkiluk@gmail.com
copyright:           2016 Andrew Kiluk
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable todo
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       DB
                     , Lists
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , text
                     , bytestring
                     , blaze-html
                     , HDBC ==2.4.0.1
                     , HDBC-sqlite3
                     , monad-logger ==0.3.19
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
                     , aeson
                     , uuid
